@@ -28,6 +28,7 @@
 === Miscellaneous ===
 
 === Bug fixes ===
+ * #1497 (There is no example to create a multivariate Normal distribution)
  * #1506 (The Brent class has no example)
  * #1661 (XMLH5StorageManager does not store IndicesCollection into HDF5 files)
  * #1662 (Operator() of a CovarianceModel with multidimensional output should yield object of type SquareMatrix)
